sofia-rs/tui/src/bottom_pane/tests/snapshots/sofia_tui__bottom_pane__tests__actionable_banner_tests__information_banner_persistent.snap
---
source: tui/src/bottom_pane/tests/actionable_banner_tests.rs
assertion_line: 32
expression: rendered
---
                                                                      
  Usage limit reached                                                 
  You can change models or request more usage.                        
                                                                      
                                                                      
› Ask Sofia to do anything                                            
                                                                      
  ? for shortcuts                                  100% context left
